# CLICMake

./: CMakeLists.txt  README.md
Core/: CMakeLists.txt  Core.hpp  Entity.cpp  Entity.hpp
Sandbox/: CMakeLists.txt  Program.cs
Sandbox/Properties/: AssemblyInfo.cs
Wrapper/: CMakeLists.txt  Entity.cpp  Entity.hpp  ManagedObject.hpp
